tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_legacy_transactions-transfer-transaction.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: parsed_transaction
---
{
  "transaction": {
    "slot": 40,
    "transaction": [
      "Aqb5KzHmjrxsQsj04kaowH7TIydfWyTHMMZKEXDuJ6XVRHTNPVmvOT4VhgxEIloet2EIduSmyeatzrGD/el4+Aplxv+k80GJxq7Pv4MpIdzVnMgrOjoHU/rl9wQbRVRo/HvZQ1VCiQIxtbfG//Vdter1jQATvicWRg1gHIOYIpcMgAIBCQ3Xw4274s8SOb1HUoePEYWcuaib2TszEE/MS6rN3ZnJw7OfnHWKBYNFDwZXhOdqwBvGj4YXreVo3U0QTh8knM5dRE19IEyAPbQBz0UseXaZEbO3cyKjf2bWAVevsV8xQUUtaxlkRkeJL9L43N8LzM1Z+DDTqAsZ255jL3/4jmvEbgMGRm/lIRcy/+ytunLDm+e8jOW7xfcSayxDmzpAAAAA9YrSxwEeKNSgRrWi/d8zJ5QeTRw+kg0Uqpn2e2KyQR+0pUDsg7fVlu64SNoTe62H9ztjOse7tyCQDbQ9bkxgnO76I9ijWlJIp9HE49KtWf+OFMeWkNc9pCIvteTimdARkc7UXi57fp4+O8qFD/X5tZdG4r6MA+E6LKGyLVgSOLkLvA/Au0fKL3TEES6UqxPPo8Y05dwX6ssDzRojzX54fJQlr738AEklZ5z/PVi137S1ja67KHPEXpbltmRVKWz4rFbVF+VphmG2mUNlOfY6oA8e5Sx7wpJM4c+seQXacoYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPGMcTzmbfnYxu6iNE3BqkWHYwsgna4PY6uRk+nLDLfyAgQABQJAQg8ABQ8AAQYHCAkKCwUFBQUMAgOfAqM0yOeMA0W6EwEAAAEjgWTc62ohEXFlWivKbcVr8YVBR1TPmXhbPu2lyVzfeB1FA7fn17hv6LjoWWUfC23PPhYxOC+15uEGrFM+5wL2GfPqJ/vXRcsuZtwwFYLDTq3uhDB9/sIwoaWo3Dxrz44WDTEMusgedckyDIYw7vd1LTLdrf7sY+hz9BTe2xn7hJmfkFmcduUCPPpkdjzvyufVL2AGchJuS06fEUMnN04IAAEAAADoAwAAAAAAAAAAAQAAAAABAAACAAAAs5+cdYoFg0UPBleE52rAG8aPhhet5WjdTRBOHySczl0sAQAAAAAAAAAAbwOMBQWH8vkur7kRmIWaCkXzNiNKsibPwcdKKo8FI4C8AgAAAAAAAAAAAAAAAA==",
      "base64"
    ],
    "meta": {
      "err": null,
      "status": {
        "Ok": null
      },
      "fee": 10000,
      "preBalances": [
        996478935,
        1000000000,
        9496057145,
        2293180800,
        1,
        1141440,
        0,
        1141440,
        1392000,
        1141440,
        0,
        1141440,
        1
      ],
      "postBalances": [
        996463565,
        1000000000,
        9496057515,
        2293185800,
        1,
        1141440,
        0,
        1141440,
        1392000,
        1141440,
        0,
        1141440,
        1
      ],
      "innerInstructions": [
        {
          "index": 1,
          "instructions": [
            {
              "programIdIndex": 7,
              "accounts": [
                0,
                6,
                8,
                9,
                10,
                11,
                5,
                7,
                7,
                12,
                7,
                2,
                3
              ],
              "data": "H92LzT8cmCLgBxNvm2MAYi9AMsHGuccqSdN5awBb9srk6HRnS3ePPqG5ApWFySapSfB7v2Hscg5CNDzNgQa73N74nEZX2tvNXvx4LvBj3u9CUZUWbDqgB7UC2brewC9xaESaTMY4RJUoGL6vmgFd8UtMfg2PgpNSnCaBBrBsMcmbxDtBZCVJb5wNrvo3AvbCkKFnQw5QJaw7Q4Q8Fss7JYNmQWgBrWDrh1zThiohNsMmHFemavKyB9XHC2afS8Bwb5otdVBSKZhS8EMFqMG2GMNy1LAENu4NJThoHUty2noyCZksj7CzE8bZ6wpNYQ3f8WsfVr4XrreeS6bHaxe7v7sE7YWti7FABt8mn9hfsRDxTMJ4U8BNt2kHY1BLg73W3NcKwuFDxhoJi6uHWx4zxSBCxwWp2FzFtVk9Fd9435hmCRwKKhLoUn4Lb4yvRMKoW5a7ggF8Ld9wxHqBbzGrw9taBTzvBjN63xw8PFTXdhwAf4DPz5LMfrzFokchWEnvuHhnBgyKTJCxhNQcTJeYSiD9gXRr5eoK9rRShoiEhXN8evxvaQb4NvRZ5wcnJCsFbiSngNkHETd9VnGRV9JpkhArZ8pSiB1VoXdSyj6vnFzwpeWDFrPB1TjNbrNVXGEju9R44QEPcMPDtKQLNJZjT6p8qH7RT5uU3Pj5YnZmpVub7B6RZ26ESpxbSbaDeSunDFys29GJrF5y3BbhLb7gjxBENMWg8DU1B5V52LM7nEG8m1o5mcvDgzHqa1oVL26Cu9ZxMQPv92eM4TXfP6j6qQEZsH3bsBpuTTdFJy7Q2NsYXMRarGeYPEvUZsKwQMGbYKweSb1fYsRBfAMSozWK1RFWyCzMR8BRwA1wGeZ1fGYhDp7PMadvWUm7LxwuukTM1hzZDbANcfruwKAZRZW9KVH",
              "stackHeight": 2
            },
            {
              "programIdIndex": 11,
              "accounts": [
                0,
                10,
                8,
                12,
                3,
                2
              ],
              "data": "WiZw2hSp2LSxinAV5cr62tjrxkRjcUfuXVS8UPWowy7UZkHd61x7B1AaQDNW",
              "stackHeight": 3
            },
            {
              "programIdIndex": 12,
              "accounts": [
                0,
                3
              ],
              "data": "3Bxs4PckVVt51W8w",
              "stackHeight": 3
            },
            {
              "programIdIndex": 11,
              "accounts": [
                0,
                10,
                8,
                12,
                2
              ],
              "data": "7UWNMdwFJEWBQPSoUMH3X3tegVQDq8GkZ5Z4jh8hpMTCa6uEtabnB6wEgQTzkPPBHZ8bFEHLQQcySF2CpxpPvrBZ6UQgZG8LWnuFEUChVGH",
              "stackHeight": 3
            },
            {
              "programIdIndex": 12,
              "accounts": [
                0,
                2
              ],
              "data": "3Bxs4Kve8YTRHdVR",
              "stackHeight": 4
            },
            {
              "programIdIndex": 9,
              "accounts": [],
              "data": "GHmxyGH4sAzLosiMBZTENbNJHVvMKD2WmGgubvtobmPUdbW9U8CSM7ZrgP1t6aQr1gs8MfaWQTQip7Vgi2JoqVvE7uDMnRab3nVgw2MHDZP3ShLuEkQuXsiq6wYzDR6v7dP4mvdHdaK2KzLHMTXfDQqhFH71snKHhNKu5UiwewALUbLoj3aUWnJtbTAVHzeoVbrt2gd61g1MjgqvnXRvLpDDQ6mLSUgU8SRNP73i2hadPQuCvLLK3f3aU1ijSWaWGEe3BBD9NXrDRTyiMrEtvpT6uFT3Pk7kCa9ratNfeoND63WCSJGjk5GmBuLGso1xqFxotFPV7EAdMFqn7MSZbVRajwvFqYLBcHD2jnEEzyqqiWj98RaSJYvqo6s9TUw2hH8ZaFowpgBoFdoS7jUYiTsPzVxynv6kPcLca1pfRzWmboe7VMQX4jXwmXx21ErAMrBQbf8MNZ2ZgbeM7dYGSUMER7NXicNGYW2kUSdvWxp6ziTyw61vekG8VUmdkCGW2A7VEdhk491tthBAKku9VgBSs8rdrRWoRw1m7SqdvsyrW5jnozJRYs2KLE5aqGVjMn63BXq6cgEL3qcRDMUQDPPZPK2YJ8L5hjbxR9Pc8yCgXHAYi3BEBEXoGpEsufy45bbPa7cZDFcPmzwWGNRhWKTRibq5pEbDo4fbsPD8qc3JMJUR6Yz2P4DwcDptbvGaGkMXJ29d19hbdH5qS2jJp1L2SmMT52c2WpqDDGkcu51hF1CavE3R28exo",
              "stackHeight": 3
            }
          ]
        }
      ],
      "logMessages": [
        "Program ComputeBudget111111111111111111111111111111 invoke [1]",
        "Program ComputeBudget111111111111111111111111111111 success",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN invoke [1]",
        "Program log: Instruction: Transfer",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN invoke [2]",
        "Program log: Instruction: InvokeCpi",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK invoke [3]",
        "Program log: Instruction: InsertIntoNullifierQueues",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK consumed 9632 of 814569 compute units",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK success",
        "Program 11111111111111111111111111111111 invoke [3]",
        "Program 11111111111111111111111111111111 success",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK invoke [3]",
        "Program log: Instruction: AppendLeavesToMerkleTrees",
        "Program 11111111111111111111111111111111 invoke [4]",
        "Program 11111111111111111111111111111111 success",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK consumed 45238 of 787607 compute units",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK success",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV invoke [3]",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV consumed 38 of 738947 compute units",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV success",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN consumed 220960 of 959241 compute units",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN success",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN consumed 262579 of 999850 compute units",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN success"
      ],
      "preTokenBalances": [],
      "postTokenBalances": [],
      "rewards": [],
      "loadedAddresses": {
        "writable": [],
        "readonly": []
      },
      "computeUnitsConsumed": 262729
    },
    "version": 0,
    "blockTime": 1719426181
  },
  "compressionInfo": {
    "closedAccounts": [
      {
        "account": {
          "hash": "38cMfbf6p4aymyPpEEzNnfK9LsAxerCe917nxLDm1ZDY",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "mZ+QWZx25QI8+mR2PO/K59UvYAZyEm5LTp8RQyc3Tgizn5x1igWDRQ8GV4TnasAbxo+GF63laN1NEE4fJJzOXegDAAAAAAAAAAA=",
            "dataHash": "3BSxj25DcZ8rG2gRih7sdUSgKmDfSpzYEWcs7ZH7yoXq"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 0,
          "seq": 1,
          "slotCreated": 0
        },
        "optionalTokenData": {
          "mint": "BLgVpQXRRmUGBMztr3M8mRkrNEtjBGbnrTrfBPLv2QJT",
          "owner": "D6B941apqSHVU5TV2n7JevkpAVQ4sdhiT6g1fNoEMfYG",
          "amount": 1000,
          "delegate": null,
          "state": "initialized",
          "tlv": null
        }
      }
    ],
    "openedAccounts": [
      {
        "account": {
          "hash": "141qnUiXjSXBVp1upL8UX5vPuVqUYW3xVayVDZ3St7Dc",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "mZ+QWZx25QI8+mR2PO/K59UvYAZyEm5LTp8RQyc3Tgizn5x1igWDRQ8GV4TnasAbxo+GF63laN1NEE4fJJzOXSwBAAAAAAAAAAA=",
            "dataHash": "3rSuBuxRcG89cZmiJdUaRiBeuRGCFzyahgzEC2H3sDg2"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 1,
          "seq": 2,
          "slotCreated": 40
        },
        "optionalTokenData": {
          "mint": "BLgVpQXRRmUGBMztr3M8mRkrNEtjBGbnrTrfBPLv2QJT",
          "owner": "D6B941apqSHVU5TV2n7JevkpAVQ4sdhiT6g1fNoEMfYG",
          "amount": 300,
          "delegate": null,
          "state": "initialized",
          "tlv": null
        }
      },
      {
        "account": {
          "hash": "3uob7yFAfWnAwkY6oooobsaW3a6UGijW7AjFec3tS8Dj",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "mZ+QWZx25QI8+mR2PO/K59UvYAZyEm5LTp8RQyc3TghvA4wFBYfy+S6vuRGYhZoKRfM2I0qyJs/Bx0oqjwUjgLwCAAAAAAAAAAA=",
            "dataHash": "HmSH599KrhsJiUES1bsjzxWKCBx9r4h7pUF9sQfMfCK"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 2,
          "seq": 3,
          "slotCreated": 40
        },
        "optionalTokenData": {
          "mint": "BLgVpQXRRmUGBMztr3M8mRkrNEtjBGbnrTrfBPLv2QJT",
          "owner": "8UMPheZvcShkq7DwPpJN5NusYDKTwfx9FVTyZXnVLSaj",
          "amount": 700,
          "delegate": null,
          "state": "initialized",
          "tlv": null
        }
      }
    ]
  }
}
