tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_new_transactions-bob-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [],
    "cursor": null
  }
}
