tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_new_transactions-bob-validity-proof.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: validity_proof
---
{
  "compressedProof": {
    "a": [],
    "b": [],
    "c": []
  },
  "roots": [
    "ZMg67iuQAyRUALR4TmAMyWGVEXV2e8yCpRSqdnR8Y1n",
    "ZMg67iuQAyRUALR4TmAMyWGVEXV2e8yCpRSqdnR8Y1n"
  ],
  "rootIndices": [
    7,
    7
  ],
  "leafIndices": [
    6,
    3
  ],
  "leaves": [
    "2WfNf8qZoMNGR4mAPX8toADTdRpcKYTX1KUUAEHMi7dJ",
    "36ewgEJTqSu4enYGWUcxm4CYezR3kgfHBeV29WiEgKaY"
  ],
  "merkleTrees": [
    "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
    "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W"
  ]
}
