tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_new_transactions-charles-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "account": {
          "hash": "21a33JmBirKxeMq88LfBKfZy5VM5Gb8Jf2H6RV4zN7Xy",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "2b5R6MH0bIdXCz0nKe2kPJpKHK5c9CbvbTEjJbkj/lg/d0l2Se25bBAx93z7Rez3HcuQM54KQcR17MLzBpll5sgAAAAAAAAAAAAA",
            "dataHash": "44ngMxchW1yH2PEwQoMiH9qNDZsiDjiw5o8PbwmCM7bo"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 4,
          "seq": 5,
          "slotCreated": 0
        },
        "tokenData": {
          "mint": "FeynqjiR2HGyqQX6ouv5jrRnGxEFYHHRvvnwGQ2HpfSX",
          "owner": "5GkBcTAGLJ2nU7WEbaecndeV5HXzp8LicqkGf6DKKR97",
          "amount": 200,
          "delegate": null,
          "state": "initialized",
          "tlv": null
        }
      },
      {
        "account": {
          "hash": "3gX31m9xhLEs2r4DR1f1gePqJyUEA3Qk38WLiYbGkonm",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "2b5R6MH0bIdXCz0nKe2kPJpKHK5c9CbvbTEjJbkj/lg/d0l2Se25bBAx93z7Rez3HcuQM54KQcR17MLzBpll5rcCAAAAAAAAAAAA",
            "dataHash": "2zF7zfkSL95uwUk3r2LPoTbid1LVBGoNNvZBMEBi1XCC"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 5,
          "seq": 6,
          "slotCreated": 0
        },
        "tokenData": {
          "mint": "FeynqjiR2HGyqQX6ouv5jrRnGxEFYHHRvvnwGQ2HpfSX",
          "owner": "5GkBcTAGLJ2nU7WEbaecndeV5HXzp8LicqkGf6DKKR97",
          "amount": 695,
          "delegate": null,
          "state": "initialized",
          "tlv": null
        }
      }
    ],
    "cursor": null
  }
}
