tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_new_transactions-latest-signatures.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: signatures
---
[
  {
    "signature": "5MqYh45rQf1x8D1EpeiWh4XXM7WBeDsE3MCpqvstTaCMQVBXuk3wMiUoQGY9Y2t83oGhBKoFG8zWUFoHpEB77C1g",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "3xB9XfSrNHov4FDtgQdJMZtKvbDcqvhkpyXN72ZurXvRTKbGXpw4XbUGAnbtCuNiHixf7qoSDQskTcXdA6n412yW",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "2M63FRn8tYUCDxuxo4fJLkwQfu7FQp5RecNVPK42TMdAbq45BiWjuz1P9nNy6uRrcMpXph63eAUW71GzQE1HmEGs",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "P3NmVFAosVot31wa7oyJ3e4s4zFPeUwGnm6HhFmPukjXQ14xUQvrxJSuEy2VS8gutuejoRFzPPoga3ZeBRxDJFa",
    "slot": 0,
    "blockTime": 0
  }
]
