tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_new_transactions-mint-transaction.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: parsed_transaction
---
{
  "transaction": {
    "slot": 42,
    "transaction": [
      "AkNW0wIOu23FIK19rPNJ9Sn/1Fm/Mm9n4GL8Hu6wVus0drZykd2LyZ96/wfrCxVj79XMjl12Js+OYcE0RrxLIAyqmfJMBcHuTGSCQ1V2hBOL1slz66yi82vvH0TSWVP2x+8nudY4buPUFNrXEGClYbTzhMvFTXXoweoM+jWWIOoMgAIBCg+QI16RJAI0ehgWTn8grvqPdJ382NUPsA+YoKMCt27t6JoXX3HU6z5XGcU7Jg6RVE8oshgHrbT7lKS1/Ahq4zAj2b5R6MH0bIdXCz0nKe2kPJpKHK5c9CbvbTEjJbkj/lhWfOjg6w7JATS/e59neyo3mO2L3qvnCfcT5VLENW4qRURNfSBMgD20Ac9FLHl2mRGzt3Mio39m1gFXr7FfMUFFAwZGb+UhFzL/7K26csOb57yM5bvF9xJrLEObOkAAAAD1itLHAR4o1KBGtaL93zMnlB5NHD6SDRSqmfZ7YrJBH7SlQOyDt9WW7rhI2hN7rYf3O2M6x7u3IJANtD1uTGCcBt324ddloZPZy+FGzut5rBy0he1fWzeROoz1hX7/AKnu+iPYo1pSSKfRxOPSrVn/jhTHlpDXPaQiL7Xk4pnQEZHO1F4ue36ePjvKhQ/1+bWXRuK+jAPhOiyhsi1YEji5C7wPwLtHyi90xBEulKsTz6PGNOXcF+rLA80aI81+eHyUJa+9/ABJJWec/z1Ytd+0tY2uuyhzxF6W5bZkVSls+KxW1RflaYZhtplDZTn2OqAPHuUse8KSTOHPrHkF2nKGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAL/s+mB4rfoSupz1kMk4VuhWfrzuGFThPqx8UYr8tP0wIFAAUCQEIPAAYPAAEHAgMICQoLDA0EBg4GOfEiMLols3vAAQAAAPHDrxk+q4ZKzGdlpl9mmXHjqQwE7zaODrfZ2WfNyJZEAQAAAOgDAAAAAAAAAAA=",
      "base64"
    ],
    "meta": {
      "err": null,
      "status": {
        "Ok": null
      },
      "fee": 10000,
      "preBalances": [
        996489120,
        0,
        1461600,
        2039280,
        9496056960,
        1,
        1141440,
        0,
        929020800,
        1141440,
        1392000,
        1141440,
        0,
        1141440,
        1
      ],
      "postBalances": [
        996478820,
        0,
        1461600,
        2039280,
        9496057260,
        1,
        1141440,
        0,
        929020800,
        1141440,
        1392000,
        1141440,
        0,
        1141440,
        1
      ],
      "innerInstructions": [
        {
          "index": 1,
          "instructions": [
            {
              "programIdIndex": 8,
              "accounts": [
                2,
                3,
                1
              ],
              "data": "6qYT3cRnoTxb",
              "stackHeight": 2
            },
            {
              "programIdIndex": 9,
              "accounts": [
                0,
                7,
                10,
                11,
                12,
                13,
                6,
                9,
                9,
                14,
                9,
                4
              ],
              "data": "oMTGA8J44vo3pCVmAjiCzPxz4nKYu5pf4rExqGMKqP54CBrn4JhRS8L9JaAC9QkxSi3ozrsj1CoNuh8S34VVg5GWWZcmhEFpUwbeP6sBXxs4NU2khnjRSFWekyGjzFmeLVH1icvkxdTkZjez9ufRePKs2ug2vPYf1DLkwxKjibSr56Ms9qdYsBrzdbFHE8WH81AaqPvSnVE3RR4DcC3J44JCnu9gGCbGin7cpJWqW4h7QTDiD1Af16urZkXQSsPzMRGFpNB8SxWPUrJpiyr9vEvvEjLDPzESoswt7vKR",
              "stackHeight": 2
            },
            {
              "programIdIndex": 13,
              "accounts": [
                0,
                12,
                10,
                14,
                4
              ],
              "data": "5wPdbtbk7M4b3JSHrvy2HKSAGhVDABgD4BRKNyYD1fbA1djmUds5CkehBVYVti",
              "stackHeight": 3
            },
            {
              "programIdIndex": 14,
              "accounts": [
                0,
                4
              ],
              "data": "3Bxs48DZ3Zx6m4mD",
              "stackHeight": 4
            },
            {
              "programIdIndex": 11,
              "accounts": [],
              "data": "11112kX1UFZczUNR3FKat8jrWypigqs6TgzYjb7gqtB3qzEkbHUitHKyY74iNyviMj4JNbZQGd1smwU4TJ62mWaYS8rUkLT6XxY6Sm62jw7vzeKmLAZBQzcGdM4P7zjh2QmfwwywmaDxxmxg8dVvCor2nzHFQYCC11sEuzU2yEULM4aseDUKoTabmWUR8SaTCKwmLGovVvuMmDpqBbnZFpdNQAu3zfevtRWE36TMf9xMhstHLrdKvT4u8Lf9M1LXS1j822WXCv2HMbN8erW8u4PH2gXKZV6fha4pQwQG1EsveFQEaWGdAVofpxs2vRogoM8fup8ekU1uATfgEnofKA1Axi3DRNZaswGctvQbyQVeNcyRRTzTjgefvac3Xqw6zScGAQ7eFMdkrs8GbkRxs",
              "stackHeight": 3
            }
          ]
        }
      ],
      "logMessages": [
        "Program ComputeBudget111111111111111111111111111111 invoke [1]",
        "Program ComputeBudget111111111111111111111111111111 success",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN invoke [1]",
        "Program log: Instruction: MintTo",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA invoke [2]",
        "Program log: Instruction: MintTo",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA consumed 4492 of 985356 compute units",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA success",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN invoke [2]",
        "Program log: Instruction: InvokeCpi",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK invoke [3]",
        "Program log: Instruction: AppendLeavesToMerkleTrees",
        "Program 11111111111111111111111111111111 invoke [4]",
        "Program 11111111111111111111111111111111 success",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK consumed 41865 of 929905 compute units",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK success",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV invoke [3]",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV consumed 38 of 885458 compute units",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV success",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN consumed 80331 of 965186 compute units",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN success",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN consumed 115853 of 999850 compute units",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN success"
      ],
      "preTokenBalances": [
        {
          "accountIndex": 3,
          "mint": "FeynqjiR2HGyqQX6ouv5jrRnGxEFYHHRvvnwGQ2HpfSX",
          "uiTokenAmount": {
            "uiAmount": null,
            "decimals": 2,
            "amount": "0",
            "uiAmountString": "0"
          },
          "owner": "DAAY8YnCFASfeLyXFXff8bTitePXdGcXYr6DkkYJ3aJX",
          "programId": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
        }
      ],
      "postTokenBalances": [
        {
          "accountIndex": 3,
          "mint": "FeynqjiR2HGyqQX6ouv5jrRnGxEFYHHRvvnwGQ2HpfSX",
          "uiTokenAmount": {
            "uiAmount": 10.0,
            "decimals": 2,
            "amount": "1000",
            "uiAmountString": "10"
          },
          "owner": "DAAY8YnCFASfeLyXFXff8bTitePXdGcXYr6DkkYJ3aJX",
          "programId": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
        }
      ],
      "rewards": [],
      "loadedAddresses": {
        "writable": [],
        "readonly": []
      },
      "computeUnitsConsumed": 116003
    },
    "version": 0,
    "blockTime": 1721767458
  },
  "compressionInfo": {
    "closedAccounts": [],
    "openedAccounts": [
      {
        "account": {
          "hash": "Lsd1UaoFeSSruFya73ZmK9TB2Faeaba38FCgzn4LRCS",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "2b5R6MH0bIdXCz0nKe2kPJpKHK5c9CbvbTEjJbkj/ljxw68ZPquGSsxnZaZfZplx46kMBO82jg632dlnzciWROgDAAAAAAAAAAAA",
            "dataHash": "4Crz7CUvyFFwEGNezqwtrQftjn5RjBv7scZgEC8bhPDP"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 0,
          "seq": 1,
          "slotCreated": 42
        },
        "optionalTokenData": {
          "mint": "FeynqjiR2HGyqQX6ouv5jrRnGxEFYHHRvvnwGQ2HpfSX",
          "owner": "HGkKWL7Cfm4YAqb6wtCfC6PsAKQ1DL2uccGSyJgzVSKV",
          "amount": 1000,
          "delegate": null,
          "state": "initialized",
          "tlv": null
        }
      }
    ]
  }
}
